<resources>
    <string name="app_name">Popular Movies KT</string>
    <string name="app_db_name">popular-movies-kt</string>
    <string name="movie_poster_content_description">Movie Poster: %s</string>
    <string name="extra_movie" translatable="false">extra_movie</string>
    <string name="alert_network_error">Network Error. Please try again.</string>

    <!-- Posters settings -->
    <string name="action_settings">Settings</string>
    <string name="pref_sort_by_label">Sort by…</string>
    <string name="pref_sort_by_key" translatable="false">sort_by_key</string>
    <string name="pref_sort_by_label_popular">Popular</string>
    <string name="pref_sort_by_label_top_rated">Top Rated</string>
    <string name="pref_sort_by_label_favorites">Favorites</string>
    <string name="pref_sort_by_popular_value" translatable="false">popular</string>
    <string name="pref_sort_by_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_sort_by_favorites_value" translatable="false">favorites</string>

    <!-- Movie Details -->
    <string name="movie_detail_label">Movie Detail</string>
    <string name="extra_poster_url" translatable="false">extra_poster_url</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="trailers_label_with_colon">Trailers:</string>
    <string name="mark_as_favorite_content_description">Mark as Favorite button</string>
    <string name="play_trailer_button">Play Trailer Button</string>
    <string name="trailer_label">Trailer %d</string>
    <string name="alert_network_error_trailers">A network error occurred while fetching trailer list</string>
    <string name="alert_network_error_reviews">A network error occurred while fetching reviews list</string>
    <string name="error_no_favorites_found">No favorites selected</string>
    <string name="error_database">Database error. Please try again.</string>
    <string name="reviews_label_with_colon">Reviews:</string>
    <string name="written_by">Written by %s</string>
    <string name="no_trailers_found_for_this_movie">No trailers found for this movie.</string>
    <string name="no_reviews_found_for_this_movie">No reviews found for this movie.</string>
    <string name="user_rating_formatted">%s/10</string>
</resources>
