<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="@color/colorPrimaryLight"
            android:background="@color/colorPrimaryLight"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@style/PopularMovies.CollapsingToolbar.Expanded"
            app:collapsedTitleTextAppearance="@style/PopularMovies.CollapsingToolbar.Collapsed"
            app:expandedTitleGravity="start|center_vertical"
            app:collapsedTitleGravity="start|center_vertical"
            >

            <View
                android:id="@+id/expanded_filler"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                app:layout_collapseMode="parallax"
                >

            </View>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="24dp"
                    >

                    <ImageView
                        android:id="@+id/poster_thumbnail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/movie_poster_content_description"
                        />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="top|start"
                    android:paddingTop="24dp"
                    >

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        />

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <ImageButton
                            android:id="@+id/favorite"
                            android:layout_width="28dp"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/star_big_off"
                            android:backgroundTint="#00000000"
                            android:contentDescription="@string/mark_as_favorite_content_description"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/favorite"
                            android:contentDescription="@string/mark_as_favorite_content_description"
                            android:text="@string/mark_as_favorite"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginStart="8dp"
                            android:layout_gravity="center_vertical|start"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/trailers_label_with_colon"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryLight"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:labelFor="@id/trailersRV"
                android:layout_marginBottom="8dp"
                />


            <TextView
                android:id="@+id/trailers_empty_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/no_trailers_found_for_this_movie"
                android:visibility="gone"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailersRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/reviews_label_with_colon"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryLight"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:labelFor="@id/reviewsRV"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/reviews_empty_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/no_reviews_found_for_this_movie"
                android:visibility="gone"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
